--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'Literature, Modern -- 19th century -- Periodicals'
 - !lcsh 'Science -- Periodicals'
+- GITenberg
 title: Lippincott's Magazine Of Popular Literature And Science, Old Series, Vol. 36—New
   Series, Vol. 10, July 1885
 url: http://www.gutenberg.org/ebooks/14524
